fixed overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,13 +19,13 @@
     box-sizing: border-box;
     font-family: 'inter', sans-serif;
 }
+
 a {
     text-decoration: none;
 }
 //Layout generic styles
 .wrapper {
     max-width: 1680px;
-    
     margin: 0 auto;
     position: relative;
     transition: opacity .5s ease-in-out;
@@ -321,8 +321,11 @@ section#quote {
 //tuneup section styles
 section#tuneup {
     height: auto;
+    
     .full-width-container {
         display: flex;
+        position: relative;
+        overflow-x: hidden;
     }
     .video {
         width: 800px;
@@ -438,9 +441,9 @@ section#featured {
     .featured-cards {
         display: flex;
         justify-content: space-between;
+        margin: 0 -30px;
         .box-wrapper {
-            flex-basis: 420px;
-            height: 345px;
+            margin: 0 30px;
             overflow: hidden;
             position: relative;
             text-align: center;
@@ -480,7 +483,7 @@ section#featured {
                 p {
                     color: $blue;
                     margin-top: 10px;
-                    
+
                 }
             }
             h5 {
@@ -558,17 +561,19 @@ section#bottom-cards {
     .cards {
         display: flex;
         justify-content: space-between;
-        margin: 0 -10px;
+        margin-left: -60px;
         .box {
+            flex-basis: 420px;
             text-align: center;
             border: 4px solid #2E4FFF;
             box-sizing: border-box;
             border-radius: 16px;
             padding: 80px 30px;
-            margin: 0 10px;
+            margin-left: 60px;
             opacity: 0;
             transform: translateY(100px);
             transition: all .5s ease-out;
+            cursor: pointer;
             &.intersect {
                 @for $i from 1 through 3 {
                     &:nth-child(#{$i}) {
